# pyCE

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
bubbles/: __init__.py
cosmology/: __init__.py
cosmology/analysis/: __init__.py
cosmology/analysis/aps/: __init__.py  fitting.py
cosmology/analysis/mps/: __init__.py
cosmology/data/: __init__.py
cosmology/data/wmap/: wmap_bb_spectrum_9yr_v5.txt  wmap_tb_spectrum_9yr_v5.txt
cosmology/projects/: __init__.py  matter_power_spectrum_test.py
docs/: Makefile  conf.py  getting_started.rst  guide_bosonstars.rst  guide_cosmology.rst  guide_instantons.rst  guide_oscillons.rst  guide_polytropes.rst  index.rst  license.rst
docs/_build/doctrees/: environment.pickle  index.doctree  license.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  license.html  objects.inv  search.html  (+2 more)
docs/_static/: custom.css
docs/source/: modules.rst  pyCE.bosonstars.rst  pyCE.cosmology.analysis.aps.rst  pyCE.cosmology.analysis.mps.rst  pyCE.cosmology.analysis.rst  pyCE.instantons.rst  pyCE.math.rst  pyCE.oscillons.rst  pyCE.polytropes.rst  pyCE.rst
math/: __init__.py
oscillons/: __init__.py
polytropes/: __init__.py
pyCE/: __init__.py  bosonstars.py  instantons.py  math.py  oscillons.py  polytropes.py
pyCE/cosmology/: __init__.py
source/: modules.rst  pyCE.cosmology.analysis.aps.rst  pyCE.cosmology.analysis.mps.rst  pyCE.cosmology.analysis.rst  pyCE.cosmology.data.rst  pyCE.cosmology.rst  pyCE.instantons.rst  pyCE.math.rst  pyCE.oscillons.rst  pyCE.polytropes.rst
tests/: test_bosonstars.py
(+45 files in other folders)
