[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyCE"
version = "0.2.0"
description = "A Python library for Configurational Entropy projects"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Damian R Sowinski", email = "drsowinski@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/EternalTime/pyCE"
Documentation = "https://damiansowinski.com/pyCE/"

[tool.setuptools.packages.find]
include = ["pyCE*"]

[tool.setuptools.package-data]
"pyCE.cosmology.data" = ["wmap/*.txt"]
